fix scrollbar growth issue

--- a/src/components/header/settingsMenu/settings/settings.css
+++ b/src/components/header/settingsMenu/settings/settings.css
@@ -10,6 +10,7 @@
   min-width: 220px;
   max-width: 25vw;
   margin-top: 1.5rem;
+  margin-right: 1rem;
 }
 
 
