--- a/src/components/header/settingsMenu/settingsMenu.css
+++ b/src/components/header/settingsMenu/settingsMenu.css
@@ -95,7 +95,7 @@
 /* ---------------------------------------------------------- custom scroll bar styles */
 
 #settings-menu::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
   background-color: var(--light-blue);
 }
 
@@ -104,7 +104,7 @@
   /* everything below mocks margin behavior */
   box-shadow: inset 0 0 18px 18px rgb(140, 139, 139);
   border: solid 4px transparent;
-  border-left: solid 0 transparent;
+  border-left: solid 2px transparent;
   background-clip: padding-box;
   -webkit-border-radius: 20px;
 }
@@ -112,7 +112,7 @@
 #settings-menu::-webkit-scrollbar-thumb:hover {
   box-shadow: inset 0 0 14px 14px rgb(111, 111, 111);
   border: solid 2px transparent;
-  border-left: solid 0 transparent;
+  border-left: solid 2px transparent;
 }
 
 
